--- a/q/17305.html
+++ b/q/17305.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>190</td><td>Setanta</td><td>240725T205957Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/274442#274442">bb94</a></td></tr>
-<tr d-ix="1"><td>106</td><td>R</td><td>240701T094454Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273853#273853">int 21h </a></td></tr>
-<tr d-ix="2"><td>022</td><td>Perl 5 + plF M5.10.0</td><td>180806T120712Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/170065#170065">Dom Hast</a></td></tr>
-<tr d-ix="3"><td>031</td><td>Uiua</td><td>240705T125210Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273942#273942">Joao-3</a></td></tr>
-<tr d-ix="4"><td>109</td><td>Zsh</td><td>240702T124858Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273868#273868">roblogic</a></td></tr>
+<tr d-ix="0"><td>050</td><td>Zsh +coreutils</td><td>240702T124858Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273868#273868">roblogic</a></td></tr>
+<tr d-ix="1"><td>190</td><td>Setanta</td><td>240725T205957Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/274442#274442">bb94</a></td></tr>
+<tr d-ix="2"><td>106</td><td>R</td><td>240701T094454Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273853#273853">int 21h </a></td></tr>
+<tr d-ix="3"><td>022</td><td>Perl 5 + plF M5.10.0</td><td>180806T120712Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/170065#170065">Dom Hast</a></td></tr>
+<tr d-ix="4"><td>031</td><td>Uiua</td><td>240705T125210Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/273942#273942">Joao-3</a></td></tr>
 <tr d-ix="5"><td>088</td><td>Ruby</td><td>140106T134244Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/17761#17761">manatwor</a></td></tr>
 <tr d-ix="6"><td>005</td><td>MATL</td><td>180731T131723Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/169640#169640">Sundar R</a></td></tr>
 <tr d-ix="7"><td>043</td><td>K oK</td><td>190615T210338Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/186959#186959">mkst</a></td></tr>
@@ -77,14 +77,22 @@
 <tr d-ix="48"><td>278</td><td>C</td><td>140103T154137Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/17325#17325">wjl</a></td></tr>
 <tr d-ix="49"><td>nan</td><td></td><td>140103T134038Z</td><td><a href="https://codegolf.stackexchange.com/questions/17305/transpose-a-page-of-text/17311#17311">marinus</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>191</s> 190 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a> +coreutils, <sub><s>139</s> <s>110</s></sub> <sub><s>109</s></sub> 50 bytes</h1>
+<pre class="lang-sh prettyprint-override"><code>for i ({1..`&lt;a|wc -L`})cut -c $i a|tr -d \\n&amp;&amp;echo
+</code></pre>
+<p><a href="https://tio.run/##bcwxC4JAGAbg/f0V7xBSgwftUoMUCEGLo4OfeqGDd@KdpGW/3aKmqB/wPDdXL1F0OB93goTSUuj16BWJtBfjOus0W62IWAwnO7CybPweLwJ8ZIEkjcFeIGLQGoJugnQWtAO8I7SuMNLCt4TSDag8yHeyXGzPhuv7Vqk8kvlaMjzlj005eIYlVw1l9j3DillmgkCXtf0mxR9S/JAn" rel="nofollow noreferrer">Try it online!</a> 
+<sub><s><a href="https://tio.run/##LchPC4IwGIDxu5/iZa7YCJSu/kmkU/duIjjI0RTfyVxYjX32ldTlgef3Xu5BMu6C1AZUjiVtaKxOWH2bYZv/uD6UjDpmMsy48jzadATmjklC0fO17DYZ/hJ7PhuFVgJ1dTO0zdj6br8vioK6NU134IOPIgnkAmICAbZ/2oQAuRqBy6yXHqZ@@7NAeOkH3DQoW5HwAQ" rel="nofollow noreferrer">109b</a></s>
+<s><a href="https://tio.run/##LchBC4IwGIDhu7/iYy7ZkpSupnno1L2bCA5SmuI3mQursd@@Eru88D6f@eE7xq3vlAZ5woJWNJRnLH/NsA427uOCWqYzzLh0mwGzxySh6PhSNKsMfwkdn7RE0wHtKxmz4XDke6ybKMrznNolTXfgvAuCDsgVxAgCTPsyCQFy0wLnSc0tjO36F4HwVk@4K5CmJP4L" rel="nofollow noreferrer">110b</a></s>
+<s><a href="https://tio.run/##LYzLCoMwFAX3fsVFU0kqKt36qIWuuu9OBAONNIpXiSm2lXx7qtjNgRmG852etqFssc2gQKaYk5J48ozFuglWzq7bIKdkoZcpSZg0zPeVGAXXQEoM17CCLXDBZXsPdDlFEUHD5rzeTPc3nmHpqCTqBkhbyoB24Ykdsap9P8syssxxfABjjeM04N6A98BBi7eO1u@74jiNwySgFxtfOcJneMFjAKkL1/4A" rel="nofollow noreferrer" title="Zsh – Try It Online">139b</a></s></sub></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://try-setanta.ie" rel="nofollow noreferrer">Setanta</a>, <s>191</s> 190 bytes</h1>
 <pre><code>gniomh(s){s=roinn@s(&quot;
 &quot;)t:=0u:=&quot;&quot;le i idir(0,fad@s)t=uas(t,fad(s[i]))le i idir(0,t){le j idir(0,fad@s)u+=(i&lt;fad(s[j])&amp;s[j][i])|&quot; &quot;nuair-a u!=&quot;&quot;&amp;u[-1]==&quot; &quot; u=cuid@u(0,fad@u-1)u+=&quot;
 &quot;}toradh u}
 </code></pre>
 <p><a href="https://try-setanta.ie/editor/EhEKBlNjcmlwdBCAgICwtbOICw" rel="nofollow noreferrer">try-setanta.ie link</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 106 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.r-project.org" rel="nofollow noreferrer">R</a>, 106 bytes</h1>
 <pre class="lang-r prettyprint-override"><code>for(j in Map(substr,list(s&lt;-scan(,&quot;&quot;,sep=&quot;\n&quot;)),n&lt;-1:max(nchar(s)),n))cat(ifelse(j==&quot;&quot;,&quot; &quot;,j),&quot;\n&quot;,sep=&quot;&quot;)
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=Nc6xCsIwEMbxvU9x3HSBtOAm0uLg1MHN0eWsKSa0ScmlUJ_FpQ4-lG-jpbp-8OP7P55xnl9javPt27UhkgPr4cgDyXiRFHVnJZGUuTTsSSNqMUOFZ49KaV_mm13PE_nmxpFkmZRqOJFtTSeGXFV9BQJqp_SCVo3q96hq4B4YkplSkZ0iexmCGOhNkR3Ywz2McA1g034F_9QP" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -92,7 +100,7 @@
 <p>The text is transformed to a list of characters vectors (puts together all the 1st letters, the 2nd etc.). This is done by mapping the <code>substr</code> function, and the list size corresponds to the longest textline. When there is not enough characters an empty character is produced (this is why I prefer to use <code>substr</code> instead of <code>strsplit</code>: there'll be no vector recycling!).</p>
 <p>The program then iterates through this list and conditionally outputs the characters: instead of the empty one there will be a space, or the character itself otherwise; the newlines are added at the end of each vector.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-plF -M5.10.0</code>, 22 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> + <code>-plF -M5.10.0</code>, 22 bytes</h1>
 <p>Utilises ANSI escape sequences and unprintables.</p>
 
 <pre class="lang-perl prettyprint-override"><code>$"="..";$_=".[1;$.H@F"</code></pre>
@@ -100,20 +108,10 @@
 <h2>Explanation</h2>
 <p>This code first changes the <a href="https://perldoc.perl.org/perlvar.html#%24LIST_SEPARATOR" rel="nofollow noreferrer">list separator (<code>$&quot;</code>)</a> value to be a form-feed and a backspace, then we set the implicitly printed variable <code>$_</code> to be a string that starts with the ANSI escape sequence for 'start printing at line 1 column <code>$.</code> (where <code>$.</code> is the current line of text: <code>\x1b1;$.H</code>) and interpolates the list <code>@F</code> (which is a list of all the characters on that line, populated  by autosplit (<code>-a</code>, implied by <code>-F</code>) with an empty split pattern (<code>-F</code>)) which places the contents of <code>$&quot;</code> in between each item, moving the cursor vertically down instead of continuing output after the previous character.</p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 31 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.uiua.org" rel="nofollow noreferrer">Uiua</a>, 31 bytes</h1>
 <pre><code>/$&quot;_\n_&quot;⍚⍜⇌(▽\↥≠@ .)⍉⬚@ ⊜∘≠@\n.
 </code></pre>
 <p><a href="https://uiua.org/pad?src=0_12_0-dev_1__ewogICQgSSBhbSBhIHRleHQuCiAgJCBUcmFuc3Bvc2UgbWUuCiAgJCBDYW4geW91IGRvIGl0PwoKICAkIEFCQwogICQgREUKICAkIEYKfQoKRiDihpAgLyQiX1xuXyLijZrijZzih4wo4pa9XOKGpeKJoEAgLinijYnirJpAIOKKnOKImOKJoEBcbi4K4o2aKOKIqSZwIiJGKQo=" rel="nofollow noreferrer">Try it in the pad!</a></p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, <sub><s>139</s> <s>110</s></sub> 109 bytes</h1>
-<pre class="lang-sh prettyprint-override"><code>for i;n=$[$#i&gt;n?$#i:n];for i;A+=(${(r:n:)i})
-for k ({1..$n})w=`for j ({1..$#})printf ${A[j][k]}`&amp;&amp;&lt;&lt;&lt;${w//% }
-</code></pre>
-<p><a href="https://tio.run/##LchPC4IwGIDxu5/iZa7YCJSu/kmkU/duIjjI0RTfyVxYjX32ldTlgef3Xu5BMu6C1AZUjiVtaKxOWH2bYZv/uD6UjDpmMsy48jzadATmjklC0fO17DYZ/hJ7PhuFVgJ1dTO0zdj6br8vioK6NU134IOPIgnkAmICAbZ/2oQAuRqBy6yXHqZ@@7NAeOkH3DQoW5HwAQ" rel="nofollow noreferrer">Try it online!</a>
-  <sub><s><a href="https://tio.run/##LchBC4IwGIDhu7/iYy7ZkpSupnno1L2bCA5SmuI3mQursd@@Eru88D6f@eE7xq3vlAZ5woJWNJRnLH/NsA427uOCWqYzzLh0mwGzxySh6PhSNKsMfwkdn7RE0wHtKxmz4XDke6ybKMrznNolTXfgvAuCDsgVxAgCTPsyCQFy0wLnSc0tjO36F4HwVk@4K5CmJP4L" rel="nofollow noreferrer">110b</a></s>,
-<s><a href="https://tio.run/##LYzLCoMwFAX3fsVFU0kqKt36qIWuuu9OBAONNIpXiSm2lXx7qtjNgRmG852etqFssc2gQKaYk5J48ozFuglWzq7bIKdkoZcpSZg0zPeVGAXXQEoM17CCLXDBZXsPdDlFEUHD5rzeTPc3nmHpqCTqBkhbyoB24Ykdsap9P8syssxxfABjjeM04N6A98BBi7eO1u@74jiNwySgFxtfOcJneMFjAKkL1/4A" rel="nofollow noreferrer" title="Zsh – Try It Online">139b</a></s></sub></p>
-<p>Find the longest string length, <code>n</code>. Construct array <code>A</code> from the input 'lines', right-padding each to <code>n</code>. Take slices of <code>A</code> to transpose the input lines.</p>
-<p>Array slicing is conceptually simpler than the previous approach, but only saves 1 byte in the end!</p>
 </div>
 <div id="pu5" class="pu"><h1>Ruby: 88 characters</h1>
 <p>(Posted because it's shorter then the other Ruby solutions. Not checked whether my code introduces anything new compared to those. If you already posted a Ruby solution and you feel this is mostly a copy of yours, please comment and I will retire my answer.)</p>
