--- a/q/85786.html
+++ b/q/85786.html
@@ -26,34 +26,46 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>006</td><td>Japt x</td><td>240824T092859Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275124#275124">Shaggy</a></td></tr>
-<tr d-ix="1"><td>037</td><td>Wolfram Language Mathematica</td><td>191113T022113Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195783#195783">att</a></td></tr>
-<tr d-ix="2"><td>015</td><td>Brachylog</td><td>191111T102203Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195691#195691">Unrelate</a></td></tr>
-<tr d-ix="3"><td>024</td><td>k4</td><td>160723T022554Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/86367#86367">Aaron Da</a></td></tr>
-<tr d-ix="4"><td>048</td><td>Matlab/Octave</td><td>160720T145050Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85961#85961">SpamBot</a></td></tr>
-<tr d-ix="5"><td>021</td><td>Actually</td><td>160720T101159Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85931#85931">user4594</a></td></tr>
-<tr d-ix="6"><td>010</td><td>MATL</td><td>160719T122926Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85789#85789">Luis Men</a></td></tr>
-<tr d-ix="7"><td>024</td><td>R</td><td>160720T074956Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85919#85919">plannapu</a></td></tr>
-<tr d-ix="8"><td>063</td><td>Ruby</td><td>160720T040535Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85905#85905">David Lj</a></td></tr>
-<tr d-ix="9"><td>059</td><td>PHP</td><td>160719T172040Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85832#85832">Titus</a></td></tr>
-<tr d-ix="10"><td>057</td><td>Python 2  60</td><td>160719T145834Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85815#85815">Jeremy</a></td></tr>
-<tr d-ix="11"><td>070</td><td>Lua</td><td>160719T154957Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85821#85821">Leaky Nu</a></td></tr>
-<tr d-ix="12"><td>012</td><td>APL</td><td>160719T151653Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85817#85817">Leaky Nu</a></td></tr>
-<tr d-ix="13"><td>043</td><td>PowerShell v2+</td><td>160719T151815Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85818#85818">AdmBorkB</a></td></tr>
-<tr d-ix="14"><td>010</td><td>Jelly</td><td>160719T144156Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85813#85813">Leaky Nu</a></td></tr>
-<tr d-ix="15"><td>014</td><td>Pyth</td><td>160719T142432Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85807#85807">Leaky Nu</a></td></tr>
-<tr d-ix="16"><td>020</td><td>CJam</td><td>160719T124809Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85792#85792">Martin E</a></td></tr>
-<tr d-ix="17"><td>046</td><td>Retina</td><td>160719T132314Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85799#85799">Martin E</a></td></tr>
-<tr d-ix="18"><td>046</td><td>JavaScript</td><td>160719T124213Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85791#85791">Neil</a></td></tr>
-<tr d-ix="19"><td>015</td><td>J</td><td>160719T125702Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85793#85793">miles</a></td></tr>
+<tr d-ix="0"><td>011</td><td>Uiua</td><td>240824T154539Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275129#275129">nyxbird</a></td></tr>
+<tr d-ix="1"><td>006</td><td>Japt x</td><td>240824T092859Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/275124#275124">Shaggy</a></td></tr>
+<tr d-ix="2"><td>037</td><td>Wolfram Language Mathematica</td><td>191113T022113Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195783#195783">att</a></td></tr>
+<tr d-ix="3"><td>015</td><td>Brachylog</td><td>191111T102203Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/195691#195691">Unrelate</a></td></tr>
+<tr d-ix="4"><td>024</td><td>k4</td><td>160723T022554Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/86367#86367">Aaron Da</a></td></tr>
+<tr d-ix="5"><td>048</td><td>Matlab/Octave</td><td>160720T145050Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85961#85961">SpamBot</a></td></tr>
+<tr d-ix="6"><td>021</td><td>Actually</td><td>160720T101159Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85931#85931">user4594</a></td></tr>
+<tr d-ix="7"><td>010</td><td>MATL</td><td>160719T122926Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85789#85789">Luis Men</a></td></tr>
+<tr d-ix="8"><td>024</td><td>R</td><td>160720T074956Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85919#85919">plannapu</a></td></tr>
+<tr d-ix="9"><td>063</td><td>Ruby</td><td>160720T040535Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85905#85905">David Lj</a></td></tr>
+<tr d-ix="10"><td>059</td><td>PHP</td><td>160719T172040Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85832#85832">Titus</a></td></tr>
+<tr d-ix="11"><td>057</td><td>Python 2  60</td><td>160719T145834Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85815#85815">Jeremy</a></td></tr>
+<tr d-ix="12"><td>070</td><td>Lua</td><td>160719T154957Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85821#85821">Leaky Nu</a></td></tr>
+<tr d-ix="13"><td>012</td><td>APL</td><td>160719T151653Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85817#85817">Leaky Nu</a></td></tr>
+<tr d-ix="14"><td>043</td><td>PowerShell v2+</td><td>160719T151815Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85818#85818">AdmBorkB</a></td></tr>
+<tr d-ix="15"><td>010</td><td>Jelly</td><td>160719T144156Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85813#85813">Leaky Nu</a></td></tr>
+<tr d-ix="16"><td>014</td><td>Pyth</td><td>160719T142432Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85807#85807">Leaky Nu</a></td></tr>
+<tr d-ix="17"><td>020</td><td>CJam</td><td>160719T124809Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85792#85792">Martin E</a></td></tr>
+<tr d-ix="18"><td>046</td><td>Retina</td><td>160719T132314Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85799#85799">Martin E</a></td></tr>
+<tr d-ix="19"><td>046</td><td>JavaScript</td><td>160719T124213Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85791#85791">Neil</a></td></tr>
+<tr d-ix="20"><td>015</td><td>J</td><td>160719T125702Z</td><td><a href="https://codegolf.stackexchange.com/questions/85786/dijkstras-challenge/85793#85793">miles</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, <s>7</s> 6 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu0" class="pu"><h1><a href="https://www.uiua.org/" rel="nofollow noreferrer">Uiua</a>, 11 bytes</h1>
+<pre><code>/+⊡⊚=≡≡/+°⊡.
+</code></pre>
+<p><a href="https://www.uiua.org/pad?src=0_13_0-dev_1__ZiDihpAgLyviiqHiipo94omh4omhLyvCsOKKoS4KZltbXV0KZltbMl1dCmZbWzEgNSAyXQogIFs5IDQgMl0KICBbNSA5IDZdXQpmW1swIDMgMCA0XQogIFswIDQgMSA0XQogIFs0IDMgMSAyXQogIFvCrzIgNCDCrzIgwq8xXV0KZltbMyDCrzEgMyAzXQogIFszIMKvMSAzIDFdXQo=" rel="nofollow noreferrer">Try it!</a></p>
+<pre><code>/+⊡⊚=≡≡/+°⊡.
+           °⊡  # create an array with the indices for each element
+       ≡≡/+    # sum each pair of indices
+  ⊡⊚=       . # pick-where-equal
+/+             # sum
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-x</code></a>, <s>7</s> 6 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <p>0-based</p>
 <pre><code>ËfÈ¶E°
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LXg&amp;code=y2bItkWw&amp;input=W1swLDMsMCw0XSxbMCw0LDEsNF0sWzQsMywxLDJdLFstMiw0LC0yLC0xXV0" rel="nofollow noreferrer">Try it</a></p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>42</s> 37 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>42</s> 37 bytes</h1>
 <pre><code>Tr[Pick[#2,Tr@#,#2]&amp;@@@ArrayRules@#]&amp;
 </code></pre>
 <p><a href="https://tio.run/##LYvLCsIwEEX3@Qoh0NUEm0eFLpT4B0W6C12E0mLQuohxISHfHsc0m7ln7pnZbLgvmw1utnk959Gbwc0PQwWMXlOgYmq01lfv7ff2eS5vTacmD969gqHssv7Xo44kJiAxilSCQwcC6RB7UJU66OG06xYktKBKjQm8ssKe13MmUOBgfP@RSKhlkXVBRVL@AQ" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -63,7 +75,7 @@
 Tr[                                ]    sum
 </code></pre>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 15 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/JCumin/Brachylog" rel="nofollow noreferrer">Brachylog</a>, 15 bytes</h1>
 
 <pre><code>{iiʰI-ʰ=∧Ihh}ᶠ+
 </code></pre>
@@ -80,7 +92,7 @@ Tr[                                ]    sum
      -ʰ            the value of the element minus its index within the row.
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>k4, 24 bytes</h1>
+<div id="pu4" class="pu"><h1>k4, 24 bytes</h1>
 
 <p>Assumes the matrix is stored in <code>m</code>.</p>
 
@@ -89,7 +101,7 @@ Tr[                                ]    sum
 
 <p>This is one of those puzzles where the simplifications involved in designing k from APL (and J) really hurt—k’s <code>!</code> is the equivalent of APL’s <code>⍳</code> but only works on vectors, so I have to assemble the matrix of indices myself; inner product is one character in APL but five in k; and I lose three characters to handling the empty matrix properly because k doesn’t have strongly-typed matrices.</p>
 </div>
-<div id="pu4" class="pu"><h1>Matlab/Octave, 48 bytes</h1>
+<div id="pu5" class="pu"><h1>Matlab/Octave, 48 bytes</h1>
 <p>1-indexed.</p>
 <p>Will not handle the first test case because <code>[1:0]</code> has size 1x0 for some reason</p>
 <pre><code>sum(sum(M.*(M-[1:size(M,1)]'-[1:size(M,2)]==0)))
@@ -106,7 +118,7 @@ M = [ 3 -1 3 3; 3 -1 3 1]
 sum(sum(M.*(M-[1:size(M,1)]'-[1:size(M,2)]==0)))
 </code></pre>
 </div>
-<div id="pu5" class="pu"><h2>Actually, 21 bytes</h2>
+<div id="pu6" class="pu"><h2>Actually, 21 bytes</h2>
 <pre><code>ñ`i╗ñ&quot;i╜+@;(=*&quot;£Mi`MΣ
 </code></pre>
 <p><a href="http://actually.tryitonline.net/#code=w7FgaeKVl8OxImnilZwrQDsoPSoiwqNNaWBNzqM&amp;input=W1swLDMsMCw0XSxbMCw0LDEsNF0sWzQsMywxLDJdLFstMiw0LC0yLC0xXV0" rel="nofollow noreferrer">Try it online!</a></p>
@@ -127,7 +139,7 @@ sum(sum(M.*(M-[1:size(M,1)]'-[1:size(M,2)]==0)))
                     Σ  sum the values
 </code></pre>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>15</s> <s>14</s> 10 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, <s>15</s> <s>14</s> 10 bytes</h1>
 <pre><code>3#fbb+y=*s
 </code></pre>
 <p>The input has rows separated by <code>;</code>. For example: <code>[1 5 2; 9 4 2; 5 9 6]</code>. 1-based indexing is used.</p>
@@ -151,7 +163,7 @@ s      % Sum of array
        %   Stack contains: 3
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1>R, 24 bytes</h1>
+<div id="pu8" class="pu"><h1>R, 24 bytes</h1>
 
 <pre><code>sum(M[M==row(M)+col(M)])
 </code></pre>
@@ -196,7 +208,7 @@ Test cases:</p>
 [1] 3
 </code></pre>
 </div>
-<div id="pu8" class="pu"><h1>Ruby, 63 bytes</h1>
+<div id="pu9" class="pu"><h1>Ruby, 63 bytes</h1>
 
 <p>With z as a two-dimensional array of numbers:</p>
 
@@ -217,7 +229,7 @@ z=z.flatten
 <pre><code>(1..x).to_a.product((1..y).to_a).zip(z).inject(0){|s,n|s+(n[0][0]+n[0][1]==n[1]+2?n[1]:0)}
 </code></pre>
 </div>
-<div id="pu9" class="pu"><h1>PHP, 59 bytes</h1>
+<div id="pu10" class="pu"><h1>PHP, 59 bytes</h1>
 <pre><code>foreach($a as$y=&gt;$r)foreach($r as$x=&gt;$v)$s+=($v==$x+$y)*$v;
 </code></pre>
 <p>expects array $a defined; must be empty or 2-dimensional, 0-indexed.<br />
@@ -243,13 +255,13 @@ while($samples)
 }
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1>Python 2 - <del>60</del> 57 bytes</h1>
+<div id="pu11" class="pu"><h1>Python 2 - <del>60</del> 57 bytes</h1>
 <p>It's a code snippet, so it would be a few more bytes if I actually returned the value, I guess.
 <code>e=enumerate;sum(i*(x+y==i)for x,r in e(a)for y,i in e(r))</code></p>
 <p>Thanks for the help Leaky Num :-)</p>
 <p>Quick explanation. <code>a</code> is an array holding numbers. Simply iterate through indexes and sum up all values where the value equals the sum of the index.</p>
 </div>
-<div id="pu11" class="pu"><h1>Lua, 70 bytes</h1>
+<div id="pu12" class="pu"><h1>Lua, 70 bytes</h1>
 
 
 
@@ -276,7 +288,7 @@ Dijkstras_Challenge({{0,3,0,4},{0,4,1,4},{4,3,1,2},{-2,4,-2,-1}})
 Dijkstras_Challenge({{3,-1,3,3},{3,-1,3,1}})
 </code></pre>
 </div>
-<div id="pu12" class="pu"><h1>APL, <s>13</s> 12 bytes</h1>
+<div id="pu13" class="pu"><h1>APL, <s>13</s> 12 bytes</h1>
 
 <p><strong>1 byte thanks to @jimmy23013.</strong></p>
 
@@ -315,7 +327,7 @@ Dijkstras_Challenge({{3,-1,3,3},{3,-1,3,1}})
 +/              temp ← sum of temp
 </code></pre>
 </div>
-<div id="pu13" class="pu"><h2>PowerShell v2+, 43 bytes</h2>
+<div id="pu14" class="pu"><h2>PowerShell v2+, 43 bytes</h2>
 
 <pre><code>%{$j=0;$_|%{$o+=$_*($_-eq$i+$j++)};$i++};$o
 </code></pre>
@@ -333,7 +345,7 @@ PS C:\Tools\Scripts\golfing&gt; $o=0;$i=0;$j=0;@(@(0,3,0,4),@(0,4,1,4),@(4,3,1,2
 11
 </code></pre>
 </div>
-<div id="pu14" class="pu"><h1>Jelly, <s>15</s> <s>14</s> 10 bytes</h1>
+<div id="pu15" class="pu"><h1>Jelly, <s>15</s> <s>14</s> 10 bytes</h1>
 
 <p><strong>4 bytes thanks to Adnan.</strong></p>
 
@@ -350,7 +362,7 @@ J€+"J=×⁸FS
 <p><a href="http://jelly.tryitonline.net/#code=SuKCrCsiSj3Dl-KBuEZTCsOH4oKs&amp;input=&amp;args=W10sW1syXV0sW1sxLDUsMl0sWzksNCwyXSxbNSw5LDZdXSxbWzAsMywwLDRdLFswLDQsMSw0XSxbNCwzLDEsMl0sWy0yLDQsLTIsLTFdXSxbWzMsLTEsMywzXSxbMywtMSwzLDFdXQ" rel="nofollow">Verify all testcases at once.</a>
 (Slightly modified.)</p>
 </div>
-<div id="pu15" class="pu"><h1>Pyth, 14 bytes</h1>
+<div id="pu16" class="pu"><h1>Pyth, 14 bytes</h1>
 
 <p>0-indexed.</p>
 
@@ -359,7 +371,7 @@ J€+"J=×⁸FS
 
 <p><a href="http://pyth.herokuapp.com/?code=ss.e.e%2aZqZ%2BkYb&amp;test_suite=1&amp;test_suite_input=%5B%5D%0A%5B%5B2%5D%5D%0A%5B%5B1%2C5%2C2%5D%2C%5B9%2C4%2C2%5D%2C%5B5%2C9%2C6%5D%5D%0A%5B%5B0%2C3%2C0%2C4%5D%2C%5B0%2C4%2C1%2C4%5D%2C%5B4%2C3%2C1%2C2%5D%2C%5B-2%2C4%2C-2%2C-1%5D%5D%0A%5B%5B3%2C-1%2C3%2C3%5D%2C%5B3%2C-1%2C3%2C1%5D%5D&amp;debug=0" rel="nofollow">Test suite.</a></p>
 </div>
-<div id="pu16" class="pu"><h2>CJam, <s>23</s> <s>21</s> 20 bytes</h2>
+<div id="pu17" class="pu"><h2>CJam, <s>23</s> <s>21</s> 20 bytes</h2>
 
 <p><em>Thanks to Peter Taylor for saving 3 bytes.</em></p>
 
@@ -370,7 +382,7 @@ J€+"J=×⁸FS
 
 <p><a href="http://cjam.aditsu.net/#code=%5B%5B%200%203%20%200%20%204%5D%0A%20%5B%200%204%20%201%20%204%5D%0A%20%5B%204%203%20%201%20%202%5D%0A%20%5B-2%204%20-2%20-1%5D%5D%0A%0Aee%7B~_%40f-_%2C%2C.%3D.*~%7D%251b" rel="nofollow">Test it here.</a></p>
 </div>
-<div id="pu17" class="pu"><h2><a href="https://github.com/m-ender/retina" rel="nofollow noreferrer">Retina</a>, 46 bytes</h2>
+<div id="pu18" class="pu"><h2><a href="https://github.com/m-ender/retina" rel="nofollow noreferrer">Retina</a>, 46 bytes</h2>
 
 <p>Byte count assumes ISO 8859-1 encoding.</p>
 
@@ -418,14 +430,14 @@ $*
 
 <p>We end with another match stage, but without the <code>!</code> option, this just counts the number of matches, which both sums all the unary numbers from the previous result and also converts that sum back to decimal.</p>
 </div>
-<div id="pu18" class="pu"><h2>JavaScript, <s>49</s> 46 bytes</h2>
+<div id="pu19" class="pu"><h2>JavaScript, <s>49</s> 46 bytes</h2>
 
 <pre><code>a.map((b,i)=&gt;b.map((c,j)=&gt;r+=c==i+j&amp;&amp;c),r=0)|r
 </code></pre>
 
 <p>Edit: Saved 3 bytes thanks to @MartinEnder pointing out that snippets are allowed.</p>
 </div>
-<div id="pu19" class="pu"><h1>J, 15 bytes</h1>
+<div id="pu20" class="pu"><h1>J, 15 bytes</h1>
 
 <pre><code>+/,M*M=+/&amp;i./$M
 </code></pre>
