--- a/q/275100.html
+++ b/q/275100.html
@@ -26,19 +26,36 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>208</td><td>JavaScript ES11</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
-<tr d-ix="1"><td>236</td><td>APL+WIN</td><td>240824T131230Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275128#275128">Graham</a></td></tr>
+<tr d-ix="0"><td>225</td><td>APL+WIN</td><td>240824T131230Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275128#275128">Graham</a></td></tr>
+<tr d-ix="1"><td>208</td><td>JavaScript ES11</td><td>240823T150937Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275112#275112">Arnauld</a></td></tr>
 <tr d-ix="2"><td>065</td><td>Jelly</td><td>240823T232413Z</td><td><a href="https://codegolf.stackexchange.com/questions/275100/miracle-miracle-octad-generator-generator/275118#275118">Jonathan</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>JavaScript (ES11), 208 bytes</h1>
+<div id="pu0" class="pu"><h1>APL+WIN, 225 bytes</h1>
+<pre><code>i←1 6 2 5 3 8 4 7
+a←b←'X-X-X-X-'⋄c←'O+O+O+O+'
+r←'((4 2⍴a),'' '',(4 2⍴b),(4 2⍴c))⍪'' ''⋄'
+s←r,∊6⍴⊂'a←a[i]⋄b←b[i]⋄c←c[i]⋄',r
+⍎s
+x←a←'X--X-X-X'⋄c←b←d←'XX--OO++'
+⍎s
+y←a←'X--XX-X-'⋄b←d⋄c←4⌽⌽d
+⍎s
+a←6⌽y⋄b←d⋄c←4⌽d
+⍎s
+a←⌽x⋄b←d⋄c←⌽d
+⍎s
+</code></pre>
+<p><a href="https://tio.run/##bVDBasJAEL3PV8xtDCaHapr2FwRLrkLxsNlgCQQsycVcRVS0ES/9iZ577c/Mj6QzmaZIKbsL7817b2d23WsZ5Y0r1y@RL11dF77jy/vTnPfXKQiapYLugI@HVVcoxAQneI9TfMQYH8BJLZNDi8gW8XnntZCObRFUSkejGCfcfrogJEKi8IdnwYB8EHD70YtyB0EtsSrk4ykRkU9b0l7uuViKqi0zg9rMG6SwAm4vNWzUaVPZWMNUmst7QZQ0Hct0faC5DQzPMLMFY377kp2bXa2J0OYf141F2OaP49fQyZdCtwL4Bg" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
+</div>
+<div id="pu1" class="pu"><h1>JavaScript (ES11), 208 bytes</h1>
 <p>Returns a single string, using the symbols suggested in the challenge.</p>
 <p>Most time was spent understanding how this damned MOG thing works. I'm sure a golfier solution exists.</p>
 
-<pre class="lang-javascript prettyprint-override"><code>f=(p=0x3C5692953C117D0287D52812BD3E90145413FD2A91550007913913913911n)=&gt;p?(g=(k,M,m=[])=&gt;k?(h=i=&gt;i&gt;23?`
+<pre class="lang-javascript prettyprint-override"><code>f=(p=0x3C5692953C117D0287D52812BD3E90145413FD2A91550007913913913910n)=&gt;p?(g=(k,M,m=[])=&gt;k?(h=i=&gt;i&gt;23?`
 `+g(k-1,m):&quot;X-O+&quot;[m[i]=M?M[6*(i%2*2|i/12)+i%6^i/6&amp;1]:(p/=4n)&amp;3n]+[[`
 `,,&quot; &quot;][++i%6]]+h(i))(0):f(p))(7):&quot;&quot;
 </code></pre>
-<p><a href="https://tio.run/##NYxBS8MwGIbv/goJbHxZUpsvadq1kBZd9Va8CiGyMdcudk2LE/Hgf6/1IDyHl4eX5/3wdbgeP/z0GYXx7TTPrYHJiG@102kuc612iFkt5DartdyifKjVYy4w0Qmqp1re56i1ECLLUf2DgZpyqqAz0POGD8a6RfQVnI03pS@lqvY3e9ZBHyEfaEFeomdG7GC9M03V2HQDfiU38sfHKCnzq/TVx@kaXQFTbJJA1yo4Zu0S4ZzcEmfZ38k5dgZPKQhatDAtI1vaZD6O4TpeTneXsYMWKJ1/AQ" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##NYxPS8MwHIbvfgoJbPyypDZ/mnYppEVXvRWvQohszLWLXdPgRDz43Ws9CM/h5eHleT98Ha7HDx8/kzC9nea5MxAN@5Y7lWuhldxxXjRMbItGiS0XD4181IxnKuPyqRH3mivFGCs0l/@wgE0Va@gNDLSlo7FuEUMNZ@NN5Ssh6/3NnvQwJJyOuEQvyTNBdrTembZubb4BvxIb8eNTLjDxq/zVp/mauxJiarKA1zI4Yu0SoRTdImfJ38k5cgaPMTBcdhCXUSxtNB@ncJ0up7vL1EMHGM@/" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <h3>Method</h3>
 <p>In a nutshell:</p>
 <ul>
@@ -50,23 +67,6 @@
 <ul>
 <li>we convert each matrix to ASCII and apply the requested formatting</li>
 </ul>
-</div>
-<div id="pu1" class="pu"><h1>APL+WIN, 236 bytes</h1>
-<pre><code>i←1 6 2 5 3 8 4 7
-a←b←'X-X-X-X-'⋄c←'O+O+O+O+'
-r←'((4 2⍴a),'' '',(4 2⍴b),(4 2⍴c))⍪'' ''⋄'
-s←r,∊6⍴⊂'a←a[i]⋄b←b[i]⋄c←c[i]⋄',r
-⍎s
-a←'X--X-X-X'⋄c←b←d←'XX--OO++'
-⍎s
-a←'X--XX-X-'⋄b←d⋄c←4⌽⌽d
-⍎s
-a←'X-X--XX-'⋄b←d⋄c←4⌽d
-⍎s
-a←'X-X-X--X'⋄b←d⋄c←⌽d
-⍎s
-</code></pre>
-<p><a href="https://tio.run/##bZBNCsIwEIX3c4rZjcV2Ya0/VxCUbgVxkaYohYLSrtyKqFQrbryEa7deZi5SJ40VFEkCb/K@yTyi1qkXb1S6Wno6VXme6Iovt8mY99cuiBqFojrAx8OiSozEPvrYwy4OMcABKLmL5NDUs4v4tNPmImzbRZCZstUK0OfyoRyXCIncdx05jdKOw@W9NuUNglzaMpePRV9MLrZkZqlZMhfXjIysNMO0leRmwOUlr1NJIhupSWR64toQJwzbkuwbbuJb0DYFfH7Kjr9QC/9DfzlD/nIfrJJfhWoB8AI" rel="nofollow noreferrer" title="APL (Dyalog Classic) – Try It Online">Try it online! Thanks to Dyalog Classic</a></p>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 65 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
 <p><em>Whew!</em></p>
